--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,8 +30,8 @@ steps:
   inputs:
     codeCoverageTool: 'Cobertura'
     summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/**/site/cobertura/coverage.xml'
-    pathToSources: '$(System.DefaultWorkingDirectory)/src/main/java/'
-    reportDirectory: '$(System.DefaultWorkingDirectory)/**/**/site/cobertura'
+    # pathToSources: '$(System.DefaultWorkingDirectory)/src/main/java/'
+    # reportDirectory: '$(System.DefaultWorkingDirectory)/**/**/site/cobertura'
 
 - task: PublishBuildArtifacts@1
   inputs:
