--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,6 +38,12 @@ steps:
     ArtifactName: 'calc'
     publishLocation: 'Container'
 
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Pipeline.Workspace)'
+    artifact: 'calcArtifact'
+    publishLocation: 'pipeline'
+
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(Build.BinariesDirectory)'
