--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,8 +29,6 @@ steps:
   inputs:
     codeCoverageTool: 'Cobertura'
     summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/**/site/cobertura/coverage.xml'
-    # pathToSources: '$(System.DefaultWorkingDirectory)/src/main/java/'
-    # reportDirectory: '$(System.DefaultWorkingDirectory)/**/**/site/cobertura'
 
 - task: PublishBuildArtifacts@1
   inputs:
@@ -51,3 +49,4 @@ steps:
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
+    verbose: true
