--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,17 +10,26 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+
+- task: SonarQubePrepare@4
+  inputs:
+    SonarQube: 'AzureSonar'
+    scannerMode: 'Other'
+
 - task: Maven@3
   displayName: "Run build"
   inputs:
     mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
-    jdkArchitectureOption: 'x64'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.8'
+    mavenVersionOption: 'Default'
+    mavenOptions: '-Xmx3072m'
+    mavenAuthenticateFeed: false
+    effectivePomSkip: false
+    sonarQubeRunAnalysis: true
+    sqMavenPluginVersionChoice: 'latest'
 
 - script: 'ls $(System.DefaultWorkingDirectory)'
 - script: 'ls $(System.DefaultWorkingDirectory)/**'
@@ -34,13 +43,6 @@ steps:
   inputs:
     codeCoverageTool: 'Cobertura'
     summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/**/site/cobertura/coverage.xml'
-
-
-- task: SonarQubePrepare@4
-  inputs:
-    SonarQube: 'AzureSonar'
-    scannerMode: 'Other'
-- task: SonarQubeAnalyze@4
 
 - task: PublishBuildArtifacts@1
   inputs:
